proj2/test/test_11712009_10.spl
int main() {
    float a;
    return a;
}